Componente com os detalhes do setor adicionado ao card principal

--- a/dashboard/assets/main.css
+++ b/dashboard/assets/main.css
@@ -43,6 +43,11 @@
     width: 20%;
 }
 
+#detalhes_setor_ label {
+    min-width: 50%;
+    width: 50%;
+}
+
 tr:has(td.cell--selected)>td {
     /* --accent: hotpink;
     --border: lightgrey;
