--- a/dashboard/assets/global.css
+++ b/dashboard/assets/global.css
@@ -104,10 +104,20 @@ width: 17rem!important;
 }
 
 
+.tab{
+    position: absolute;
+    top: 8rem;
+    right: 1rem;
+    border-radius: 15px;
+    width: 50%;
+    height: 80vh;
+}
+
+
 
 #inital_card_div{
     position: absolute;
-    top: 8rem;
+    top: 12rem;
     right: 1rem;
     border-radius: 15px;
     width: 50%;
@@ -115,10 +125,3 @@ width: 17rem!important;
     z-index: -1;
 }
 
-#inital_card_div> div{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-
-}
