Cetralizar container header2 da forma correta

--- a/streamlit-pmsb/styles.css
+++ b/streamlit-pmsb/styles.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /*Whole page*/
 .stMainBlockContainer  {
-    /*width: 60%;*/
     margin: 0 auto;
 }
 
@@ -42,18 +41,17 @@ h5, h6, p , a , q, li, ul, ol{
 
 
 /*Container 2 cabeçalho*/
-
-.st-key-container2_header{ 
+.st-key-container2_header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%; 
+    margin: 0 auto;
+    max-width: 800px; 
     text-align: center;
-    font-family: 'Roboto', sans-serif;
-    width: 50%;
-    margin: 0 auto;
-} 
-
-.e1f1d6gn2{
-    width: 80%;
-    margin: 0 auto;
 }
+
 
 /* title_numbered_blue_dot */
 .li-blue-dot { 
