Arrumar cor do txt da sidebar

--- a/streamlit-pmsb/styles.css
+++ b/streamlit-pmsb/styles.css
@@ -154,6 +154,6 @@ h5, h6, .st-emotion-cache-1b3332t, a , q, li, ul, ol{
 
 }
 
-.st-emotion-cache-1b3332t {
+.st-key-container_section2 .st-emotion-cache-1b3332t {
     color: white;
 }
