--- a/streamlit-pmsb/styles.css
+++ b/streamlit-pmsb/styles.css
@@ -136,7 +136,7 @@ h5, h6, .st-emotion-cache-1b3332t, a , q, li, ul, ol{
     width: 100%;
 }
 
-.st-emotion-cache-qcpnpn{
+.st-emotion-cache-qcpnpn, .st-emotion-cache-4uzi61{
     align-self: center;
     width: 50%;
 }
