--- a/streamlit-pmsb/styles.css
+++ b/streamlit-pmsb/styles.css
@@ -1,9 +1,12 @@
 /*Imports*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /*Whole page*/
+
 .stMainBlockContainer  {
     margin: 0 auto;
+    overflow-x: hidden;
 }
+
 
 /*PRÉ-HEADER*/
 .st-emotion-cache-1dp5vir {
@@ -16,7 +19,7 @@ h1, h2, h3, h4{
     font-style: bold;
 }
 
-h5, h6, p , a , q, li, ul, ol{
+h5, h6, .st-emotion-cache-1b3332t, a , q, li, ul, ol{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -42,14 +45,12 @@ h5, h6, p , a , q, li, ul, ol{
 
 /*Container 2 cabeçalho*/
 .st-key-container2_header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%; 
+    width: 50%; 
     margin: 0 auto;
-    max-width: 800px; 
+    max-width: 800px;
+    align-items: center;
     text-align: center;
+    
 }
 
 
@@ -86,3 +87,73 @@ h5, h6, p , a , q, li, ul, ol{
     padding-top: 5px;
 }
 
+/*select box*/
+.st-dy {
+    border-bottom-color: #0d04ff;
+}
+.st-dx {
+    border-top-color: #0d04ff;
+}
+.st-dw {
+    border-right-color:  #0d04ff;
+    border-left-color: #0d04ff;
+}
+
+/*popover*/
+.st-emotion-cache-ocsh0s, .st-emotion-cache-b0y9n5{
+    color: inherit;
+    border-color: inherit;
+    background-color: inherit;
+}
+
+.st-emotion-cache-ocsh0s:hover, .st-emotion-cache-b0y9n5:hover{
+    border-color: #0d04ff;
+    color: #0d04ff;
+}
+
+.st-emotion-cache-ocsh0s:active, .st-emotion-cache-b0y9n5:active{
+    background-color: #0d04ff;
+    color: white;
+    border-color: #0d04ff;
+}
+
+/*Sidebar*/
+/*ratio*/
+.st-az {
+    background-color: #0d04ff;
+}
+
+/*2. Demanda da População por água*/
+.st-key-container_section2, .st-emotion-cache-qcpnpn, .st-emotion-cache-4uzi61{
+    background-color: #0d04ff;
+    border-color: #0d04ff;
+    color: white;
+
+}
+
+.st-key-container_section2{
+    align-items: center;
+    width: 100%;
+}
+
+.st-emotion-cache-qcpnpn, .st-emotion-cache-4uzi61{
+    align-self: center;
+    width: 50%;
+}
+
+.st-emotion-cache-ocqkz7{
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+
+
+.st-emotion-cache-ocqkz7 .st-emotion-cache-w9jsfw{
+    align-tracks: center;
+
+}
+
+.st-key-container_section2 .st-emotion-cache-1b3332t {
+    color: white;
+}
